# Holodeck

./: .gitignore  README.md  download_data.sh  pyproject.toml  requirements.txt  run_from_csv.py
ai2holodeck/generation/: ceiling_objects.py  doors.py  floor_objects.py  holodeck.py  objaverse_retriever.py  object_selector.py  rooms.py  small_objects.py  wall_objects.py  walls.py  windows.py
